<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/space_S">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/motion_acceleration"
        android:textAllCaps="true"
        android:textColor="@color/sl_grey"
        android:textSize="@dimen/motion_textsize"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_XS">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/motion_x"
            android:textColor="@color/sl_light_grey"
            android:textSize="@dimen/motion_textsize"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/acceleration_x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/sl_grey"
            android:textSize="@dimen/motion_textsize"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/motion_y"
            android:textColor="@color/sl_light_grey"
            android:textSize="@dimen/motion_textsize"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/acceleration_y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/sl_grey"
            android:textSize="@dimen/motion_textsize"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/motion_z"
            android:textColor="@color/sl_light_grey"
            android:textSize="@dimen/motion_textsize"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/acceleration_z"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/sl_grey"
            android:textSize="@dimen/motion_textsize"/>
    </RelativeLayout>

</LinearLayout>