<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/match"
    android:background="@color/main_background">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/SearchToolbar"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/Popup"
        app:titleTextAppearance="@style/Toolbar.TitleText"/>

    <ScrollView
        style="@style/match"
        android:layout_below="@id/toolbar"
        android:fillViewport="true">

        <LinearLayout
            style="@style/block"
            android:orientation="vertical">

            <!-- not used as per the latest requirement -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="@dimen/material_listitem_height">

                <TextView
                    style="@style/sm_silicon_grey"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/settings_cc_myself" />

                <Switch
                    android:id="@+id/cc_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:layout_alignParentBottom="true"
                    android:background="@color/divider_line" />
            </RelativeLayout>

            <TextView
                style="@style/tb_robo_regular_18dp_grey"
                android:layout_marginStart="@dimen/space_S"
                android:layout_marginTop="@dimen/space_S"
                android:layout_gravity="left"
                android:text="@string/settings_preferences"
                android:textAllCaps="true"
                android:layout_marginBottom="@dimen/space_S"/>

            <!-- Measurements -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/material_listitem_height"
                android:background="@color/white">

                <RelativeLayout
                    style="@style/block"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_marginStart="@dimen/space_S"
                        style="@style/tb_robo_regular_14dp_grey"
                        android:layout_marginTop="@dimen/space_S"
                        android:text="@string/settings_measurements" />

                    <RadioGroup
                        android:layout_alignParentEnd="true"
                        android:checkedButton="@+id/metric"
                        android:id="@+id/measurement_toggle"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:layout_marginBottom="@dimen/space_XS"
                        android:layout_marginEnd="@dimen/space_S"
                        android:layout_marginTop="@dimen/space_XS"
                        android:background="@drawable/settings_toggle_background"
                        android:orientation="horizontal">

                        <RadioButton
                            android:layout_marginTop="@dimen/space_XXXS"
                            android:layout_marginBottom="@dimen/space_XXXS"
                            android:layout_marginStart="@dimen/space_XXXS"
                            android:id="@+id/metric"
                            android:background="@drawable/settings_toggle_widget_background"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:button="@null"
                            android:gravity="center"
                            android:text="@string/settings_metric"
                            android:textSize="@dimen/text_size_SM"
                            android:textColor="@color/black" />

                        <RadioButton
                            android:layout_marginEnd="@dimen/space_XXXS"
                            android:layout_marginTop="@dimen/space_XXXS"
                            android:layout_marginBottom="@dimen/space_XXXS"
                            android:id="@+id/us"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/settings_toggle_widget_background"
                            android:button="@null"
                            android:gravity="center"
                            android:text="@string/settings_US"
                            android:textSize="@dimen/text_size_SM"
                            android:textColor="@color/black" />
                    </RadioGroup>

                </RelativeLayout>

                <View
                    style="@style/divider_line_grey"
                    android:layout_alignParentBottom="true" />

            </RelativeLayout>

            <!-- Temperature -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/material_listitem_height"
                android:background="@color/white">

                <RelativeLayout
                    style="@style/block"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_marginStart="@dimen/space_S"
                        style="@style/tb_robo_regular_14dp_grey"
                        android:layout_marginTop="@dimen/space_S"
                        android:text="@string/settings_temperature" />

                    <RadioGroup
                        android:layout_alignParentEnd="true"
                        android:checkedButton="@+id/celsius"
                        android:id="@+id/temperature_toggle"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:layout_marginBottom="@dimen/space_XS"
                        android:layout_marginEnd="@dimen/space_S"
                        android:layout_marginTop="@dimen/space_XS"
                        android:background="@drawable/settings_toggle_background"
                        android:orientation="horizontal">

                        <RadioButton
                            android:layout_marginTop="@dimen/space_XXXS"
                            android:layout_marginBottom="@dimen/space_XXXS"
                            android:layout_marginStart="@dimen/space_XXXS"
                            android:id="@+id/celsius"
                            android:background="@drawable/settings_toggle_widget_background"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:button="@null"
                            android:gravity="center"
                            android:text="@string/settings_celsius"
                            android:textSize="@dimen/text_size_SM"
                            android:textColor="@color/black" />

                        <RadioButton
                            android:layout_marginEnd="@dimen/space_XXXS"
                            android:layout_marginTop="@dimen/space_XXXS"
                            android:layout_marginBottom="@dimen/space_XXXS"
                            android:id="@+id/fahrenheit"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/settings_toggle_widget_background"
                            android:button="@null"
                            android:gravity="center"
                            android:text="@string/settings_fahrenheit"
                            android:textSize="@dimen/text_size_SM"
                            android:textColor="@color/black" />
                    </RadioGroup>

                </RelativeLayout>

                <View
                    style="@style/divider_line_grey"
                    android:layout_alignParentBottom="true" />

            </RelativeLayout>

            <!-- Model Type -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/material_listitem_height"
                android:background="@color/white">

                <RelativeLayout
                    style="@style/block"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_marginStart="@dimen/space_S"
                        style="@style/tb_robo_regular_14dp_grey"
                        android:layout_marginTop="@dimen/space_S"
                        android:text="@string/settings_model_type" />

                    <RadioGroup
                        android:layout_alignParentEnd="true"
                        android:checkedButton="@+id/board"
                        android:id="@+id/model_type_toggle"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:layout_marginBottom="@dimen/space_XS"
                        android:layout_marginEnd="@dimen/space_S"
                        android:layout_marginTop="@dimen/space_XS"
                        android:background="@drawable/settings_toggle_background"
                        android:orientation="horizontal">

                        <RadioButton
                            android:layout_marginTop="@dimen/space_XXXS"
                            android:layout_marginBottom="@dimen/space_XXXS"
                            android:layout_marginStart="@dimen/space_XXXS"
                            android:id="@+id/board"
                            android:background="@drawable/settings_toggle_widget_background"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:button="@null"
                            android:gravity="center"
                            android:text="@string/settings_board"
                            android:textSize="@dimen/text_size_SM"
                            android:textColor="@color/black" />

                        <RadioButton
                            android:layout_marginEnd="@dimen/space_XXXS"
                            android:layout_marginTop="@dimen/space_XXXS"
                            android:layout_marginBottom="@dimen/space_XXXS"
                            android:id="@+id/car"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/settings_toggle_widget_background"
                            android:button="@null"
                            android:gravity="center"
                            android:text="@string/settings_car"
                            android:textSize="@dimen/text_size_SM"
                            android:textColor="@color/black" />
                    </RadioGroup>

                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/beacon_notifications"
                android:layout_width="match_parent"
                android:layout_height="@dimen/material_listitem_height"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    style="@style/s_red"
                    android:layout_width="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/settings_beacon_notifications" />

                <TextView
                    style="@style/sm_silicon_grey"
                    android:id="@+id/beacons_status"
                    android:layout_width="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/material_container_margin" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>