<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/settings_edit_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/SearchToolbar"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/Popup" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/settings_text_background"
        android:orientation="vertical"
        android:paddingLeft="@dimen/space_S">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">
            
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_name"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size_M"/>
            
            <EditText
                android:id="@+id/settings_edit_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:singleLine="true"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size_M"/>
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_title"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size_M"/>

            <EditText
                android:id="@+id/settings_edit_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:singleLine="true"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size_M"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_email"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size_M"/>

            <EditText
                android:id="@+id/settings_edit_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:inputType="textEmailAddress"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size_M"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_phone"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size_M"/>

            <EditText
                android:id="@+id/settings_edit_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:inputType="phone"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size_M"/>
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/settings_text_background"
        android:layout_marginTop="@dimen/space_S"
        android:paddingLeft="@dimen/space_S"
        android:paddingRight="@dimen/space_S"
        android:paddingTop="@dimen/space_XS"
        android:paddingBottom="@dimen/space_XS">

        <TextView
            style="@style/SettingsText"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:text="@string/settings_cc_myself" />

        <ToggleButton
            android:id="@+id/settings_edit_self_cc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

</LinearLayout>